Test Org - Speridian/src/objects/BA_Group_Class_Administration__c.object
<CustomObject>
    <fields>
        <fullName>ba_Class_Description__c</fullName>
        <label>Class Description</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Class_Type__c</fullName>
        <label>Class Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_EnrollableClass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrollable Class</label>
        <type>Checkbox</type>
    </fields>
    <label>Group Class Administration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Class Administration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>